2011-07-04  Neil Horman <nhorman@tuxdriver.com>
	* configure.in, config.h.in, configure, src/main.c: Modified autoconf
	files to support checking for getopt_long function and changed
	_GNU_SOURCE macro test to HAVE_GETOPT_LONG test.  This should support
	using getopt_long on all platoforms automatically rather than have the
	admin define it at build time.

2011-07-04  Neil Horman <nhorman@tuxdriver.com>
	* src/main.c: Remove unneeded if statement that checked for proper use
	of s, f, i and p options (sf bug 2912347)

2011-06-29  Neil Horman <nhorman@tuxdriver.com>
	* src/fscanner.l, src/scanner.l: Add NULL check to strpbrk call to 
	avoid cscope crashes when reading garbage files

2011-06-12  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>

	* Makefile.in, aclocal.m4, config.h.in, configure,
	contrib/Makefile.in, doc/Makefile.in, src/Makefile.in: Regenerated
	by newer autoconf.

	* src/build.c (build): Remove pointless write.
	(copydata, copyinverted): Avoid potential NULL pointer problem.

	* src/find.c (findcalling): Remove pointless write.

	* src/main.c (main): Remove pointless write.
	(main): Documented default include directory $INCDIR wasn't
	actually considered.

	* src/invlib.c (invmake): Remove pointless code.
	(invnewterm): Restrict variable to the only block it's used in.
	(boolfile): Remove unused local.

	* src/main.c (main): Handle Ctrl-Z manually, as curses raw mode
	doesn't do that by itself.

	* src/command.c (changestring): Likewise.

2011-05-26 Neil Horman <nhorman@tuxdriver.com>

	* contrib/cctree.vim: Added vi plugin to read cscope db's
	* contrib/cctree.txt: Added docs for cctree.vim

2010-09-30  Neil Horman <nhorman@tuxdriver.com>

	* src/main.c: Ignore SIGPIPE in linemode as well to allow
	for proper file cleanup

2010-03-04  Hans-Bernhard Broeker  <broeker@physik.rwth-achen.de>

	* src/dir.c (includedir, incfile): Cast size_t value to integer
	for use as a *printf() precision argument.
